# MultiVectors

./: .gitignore  README.md  README.rst  docs.md  multivectors.py  pyproject.toml  run_tests.py  setup.py
.github/workflows/: python-package.yml
docs/: applied.rst  conf.py  geometric_algebra.rst  index.rst  reference.rst
